added redux store and api calls

--- a/src/locales/de/de-translation.json
+++ b/src/locales/de/de-translation.json
@@ -16,14 +16,16 @@
         "ai": "Datenanalyse & KI"
       },
       "references": {
+        "all": "Alle Referenzen",
+        "allDesc": "Entdecken Sie alle unsere erfolgreichen Projekte.",
         "eCommerce": "E-Commerce-Projekte",
         "corporate": "Unternehmenswebsites",
         "mobile": "Mobile Anwendungen",
         "software": "Individuelle Softwareprojekte",
-        "eCommerceDesc": "Erfolgreich abgeschlossene E-Commerce-Projekte.",
-        "corporateDesc": "Websites für unsere Unternehmenskunden.",
-        "mobileDesc": "Anwendungen für iOS- und Android-Plattformen.",
-        "softwareDesc": "Individuelle Softwarelösungen für unsere Kunden."
+        "eCommerceDesc": "E-Commerce-Projekte, die wir erfolgreich abgeschlossen haben.",
+        "corporateDesc": "Websites, die wir für unsere Unternehmenskunden entwickelt haben.",
+        "mobileDesc": "Anwendungen, die wir für iOS- und Android-Plattformen entwickelt haben.",
+        "softwareDesc": "Individuelle Softwarelösungen, die wir für unsere Kunden entwickelt haben."
       },
       "about": {
         "whoWeAre": "Wer Wir Sind",
@@ -603,5 +605,138 @@
     "map": {
       "title": "Besuchen Sie uns"
     }
+  },
+  "references": {
+    "title": "Unsere Referenzen",
+    "subtitle": "Projekte, die wir erfolgreich abgeschlossen haben",
+    "noReferences": "Noch keine Referenzen verfügbar.",
+    "loading": "Wird geladen...",
+    "error": {
+      "title": "Ein Fehler ist aufgetreten",
+      "message": "Beim Laden der Referenzinformationen ist ein Fehler aufgetreten."
+    },
+    "notFound": {
+      "title": "Referenz nicht gefunden",
+      "message": "Die gesuchte Referenz konnte nicht gefunden werden oder wurde möglicherweise gelöscht."
+    },
+    "visitWebsite": "Website besuchen",
+    "completionDate": "Fertigstellungsdatum",
+    "addNew": "Neue Referenz hinzufügen",
+    "backToList": "Zurück zur Liste",
+    "description": "Beschreibung",
+    "details": "Projektdetails",
+    "client": "Kunde",
+    "technologies": "Technologien",
+    "projectUrl": "Projekt-URL",
+    "createdAt": "Erstellt am",
+    "updatedAt": "Aktualisiert am",
+    "form": {
+      "title": "Titel",
+      "summary": "Zusammenfassung",
+      "description": "Beschreibung",
+      "thumbnailUrl": "Vorschaubild URL",
+      "clientName": "Kundenname",
+      "clientLogo": "Kundenlogo URL",
+      "projectUrl": "Projekt URL",
+      "completionDate": "Fertigstellungsdatum",
+      "technologies": "Technologien",
+      "active": "Aktiv",
+      "save": "Speichern",
+      "cancel": "Abbrechen"
+    },
+    "filters": {
+      "all": "Alle",
+      "active": "Nur Aktive",
+      "byTitle": "Nach Titel",
+      "byTechnology": "Nach Technologie",
+      "search": "Suchen",
+      "searchPlaceholder": "Suchbegriff eingeben..."
+    }
+  },
+  "admin": {
+    "adminPanel": "Admin-Panel",
+    "dashboard": "Dashboard",
+    "references": "Referenzen",
+    "settings": "Einstellungen",
+    "logout": "Abmelden",
+    "online": "Online",
+    "offline": "Offline",
+    "totalReferences": "Gesamte Referenzen",
+    "activeReferences": "Aktive Referenzen",
+    "inactiveReferences": "Inaktive Referenzen",
+    "quickActions": "Schnellzugriff",
+    "addNewReference": "Neue Referenz hinzufügen",
+    "manageReferences": "Referenzen verwalten",
+    "systemStatus": "Systemstatus",
+    "apiStatus": "API-Status",
+    "lastUpdate": "Letzte Aktualisierung",
+    "recentReferences": "Neueste Referenzen",
+    "viewAll": "Alle anzeigen",
+    "title": "Titel",
+    "status": "Status",
+    "date": "Datum",
+    "actions": "Aktionen",
+    "active": "Aktiv",
+    "inactive": "Inaktiv",
+    "noReferencesFound": "Keine Referenzen gefunden",
+    "search": "Suchen",
+    "searchPlaceholder": "Nach Titel oder Kundenname suchen...",
+    "filterByStatus": "Nach Status filtern",
+    "allStatuses": "Alle Status",
+    "activeOnly": "Nur aktive",
+    "inactiveOnly": "Nur inaktive",
+    "sortBy": "Sortieren nach",
+    "newest": "Neueste",
+    "oldest": "Älteste",
+    "titleAZ": "Titel (A-Z)",
+    "clientAZ": "Kunde (A-Z)",
+    "activate": "Aktivieren",
+    "deactivate": "Deaktivieren",
+    "delete": "Löschen",
+    "edit": "Bearbeiten",
+    "view": "Ansehen",
+    "confirmDelete": "Löschen bestätigen",
+    "deleteWarning": "Sind Sie sicher, dass Sie diese Referenz löschen möchten? Diese Aktion kann nicht rückgängig gemacht werden.",
+    "cancel": "Abbrechen",
+    "confirmBulkDelete": "Sind Sie sicher, dass Sie die ausgewählten Referenzen löschen möchten? Diese Aktion kann nicht rückgängig gemacht werden.",
+    "confirmBulkActivate": "Sind Sie sicher, dass Sie die ausgewählten Referenzen aktivieren möchten?",
+    "confirmBulkDeactivate": "Sind Sie sicher, dass Sie die ausgewählten Referenzen deaktivieren möchten?",
+    "errorLoadingReferences": "Fehler beim Laden der Referenzen",
+    "tryAgain": "Erneut versuchen",
+    "back": "Zurück",
+    "editReference": "Referenz bearbeiten",
+    "basicInformation": "Grundinformationen",
+    "summary": "Zusammenfassung",
+    "description": "Beschreibung",
+    "technologies": "Technologien",
+    "technologiesPlaceholder": "React, Node.js, MongoDB, ...",
+    "technologiesHelp": "Geben Sie Technologien durch Kommas getrennt ein",
+    "completionDate": "Fertigstellungsdatum",
+    "clientInformation": "Kundeninformationen",
+    "clientName": "Kundenname",
+    "projectUrl": "Projekt-URL",
+    "clientLogo": "Kundenlogo",
+    "images": "Bilder",
+    "thumbnail": "Vorschaubild",
+    "additionalImages": "Zusätzliche Bilder",
+    "uploadLogo": "Logo hochladen",
+    "changeLogo": "Logo ändern",
+    "uploadThumbnail": "Vorschaubild hochladen",
+    "changeThumbnail": "Vorschaubild ändern",
+    "addImages": "Bilder hinzufügen",
+    "new": "Neu",
+    "saveReference": "Referenz speichern",
+    "updateReference": "Referenz aktualisieren",
+    "titleRequired": "Titel ist erforderlich",
+    "summaryRequired": "Zusammenfassung ist erforderlich",
+    "descriptionRequired": "Beschreibung ist erforderlich",
+    "thumbnailRequired": "Vorschaubild ist erforderlich",
+    "errorSavingReference": "Fehler beim Speichern der Referenz",
+    "referenceAdded": "Referenz erfolgreich hinzugefügt",
+    "referenceUpdated": "Referenz erfolgreich aktualisiert",
+    "imageDetails": "Bilddetails",
+    "imageCaption": "Bildunterschrift",
+    "displayOrder": "Anzeigereihenfolge",
+    "save": "Speichern"
   }
 } 
