--- a/src/locales/en/en-translation.json
+++ b/src/locales/en/en-translation.json
@@ -16,14 +16,16 @@
         "ai": "Data Analysis & AI"
       },
       "references": {
+        "all": "All References",
+        "allDesc": "Discover all our successful projects.",
         "eCommerce": "E-Commerce Projects",
         "corporate": "Corporate Websites",
         "mobile": "Mobile Applications",
         "software": "Custom Software Projects",
-        "eCommerceDesc": "Successfully completed e-commerce projects.",
-        "corporateDesc": "Websites developed for our corporate clients.",
-        "mobileDesc": "Applications developed for iOS and Android platforms.",
-        "softwareDesc": "Custom software solutions developed for our clients."
+        "eCommerceDesc": "E-commerce projects we have successfully completed.",
+        "corporateDesc": "Websites we developed for our corporate clients.",
+        "mobileDesc": "Applications we developed for iOS and Android platforms.",
+        "softwareDesc": "Custom software solutions we developed for our clients."
       },
       "about": {
         "whoWeAre": "Who We Are",
@@ -603,5 +605,140 @@
     "map": {
       "title": "Visit Us"
     }
+  },
+  "references": {
+    "title": "Our References",
+    "subtitle": "Projects we have successfully completed",
+    "noReferences": "No references available yet.",
+    "loading": "Loading...",
+    "error": {
+      "title": "An error occurred",
+      "message": "An error occurred while loading reference information."
+    },
+    "notFound": {
+      "title": "Reference not found",
+      "message": "The reference you are looking for could not be found or may have been deleted."
+    },
+    "visitWebsite": "Visit Website",
+    "completionDate": "Completion Date",
+    "addNew": "Add New Reference",
+    "backToList": "Back to List",
+    "description": "Description",
+    "details": "Project Details",
+    "client": "Client",
+    "technologies": "Technologies",
+    "projectUrl": "Project URL",
+    "createdAt": "Created At",
+    "updatedAt": "Updated At",
+    "form": {
+      "title": "Title",
+      "summary": "Summary",
+      "description": "Description",
+      "thumbnailUrl": "Thumbnail URL",
+      "clientName": "Client Name",
+      "clientLogo": "Client Logo URL",
+      "projectUrl": "Project URL",
+      "completionDate": "Completion Date",
+      "technologies": "Technologies",
+      "active": "Active",
+      "save": "Save",
+      "cancel": "Cancel"
+    },
+    "filters": {
+      "all": "All",
+      "active": "Active Only",
+      "byTitle": "By Title",
+      "byTechnology": "By Technology",
+      "search": "Search",
+      "searchPlaceholder": "Enter search term..."
+    }
+  },
+  "admin": {
+    "adminPanel": "Admin Panel",
+    "dashboard": "Dashboard",
+    "references": "References",
+    "settings": "Settings",
+    "logout": "Logout",
+    "online": "Online",
+    "offline": "Offline",
+    "totalReferences": "Total References",
+    "activeReferences": "Active References",
+    "inactiveReferences": "Inactive References",
+    "quickActions": "Quick Actions",
+    "addNewReference": "Add New Reference",
+    "manageReferences": "Manage References",
+    "systemStatus": "System Status",
+    "apiStatus": "API Status",
+    "lastUpdate": "Last Update",
+    "recentReferences": "Recent References",
+    "viewAll": "View All",
+    "title": "Title",
+    "client": "Client",
+    "status": "Status",
+    "date": "Date",
+    "actions": "Actions",
+    "active": "Active",
+    "inactive": "Inactive",
+    "noReferencesFound": "No references found",
+    "search": "Search",
+    "searchPlaceholder": "Search by title or client name...",
+    "filterByStatus": "Filter by Status",
+    "allStatuses": "All Statuses",
+    "activeOnly": "Active Only",
+    "inactiveOnly": "Inactive Only",
+    "sortBy": "Sort By",
+    "newest": "Newest",
+    "oldest": "Oldest",
+    "titleAZ": "Title (A-Z)",
+    "clientAZ": "Client (A-Z)",
+    "activate": "Activate",
+    "deactivate": "Deactivate",
+    "delete": "Delete",
+    "edit": "Edit",
+    "view": "View",
+    "confirmDelete": "Confirm Delete",
+    "deleteWarning": "Are you sure you want to delete this reference? This action cannot be undone.",
+    "cancel": "Cancel",
+    "confirmBulkDelete": "Are you sure you want to delete the selected references? This action cannot be undone.",
+    "confirmBulkActivate": "Are you sure you want to activate the selected references?",
+    "confirmBulkDeactivate": "Are you sure you want to deactivate the selected references?",
+    "errorLoadingReferences": "Error loading references",
+    "tryAgain": "Try Again",
+    "createdAt": "Created At",
+    "back": "Back",
+    "editReference": "Edit Reference",
+    "basicInformation": "Basic Information",
+    "summary": "Summary",
+    "description": "Description",
+    "technologies": "Technologies",
+    "technologiesPlaceholder": "React, Node.js, MongoDB, ...",
+    "technologiesHelp": "Enter technologies separated by commas",
+    "completionDate": "Completion Date",
+    "clientInformation": "Client Information",
+    "clientName": "Client Name",
+    "projectUrl": "Project URL",
+    "clientLogo": "Client Logo",
+    "images": "Images",
+    "thumbnail": "Thumbnail",
+    "additionalImages": "Additional Images",
+    "uploadLogo": "Upload Logo",
+    "changeLogo": "Change Logo",
+    "uploadThumbnail": "Upload Thumbnail",
+    "changeThumbnail": "Change Thumbnail",
+    "addImages": "Add Images",
+    "new": "New",
+    "saveReference": "Save Reference",
+    "updateReference": "Update Reference",
+    "titleRequired": "Title is required",
+    "summaryRequired": "Summary is required",
+    "descriptionRequired": "Description is required",
+    "thumbnailRequired": "Thumbnail is required",
+    "errorSavingReference": "Error saving reference",
+    "referenceAdded": "Reference added successfully",
+    "referenceUpdated": "Reference updated successfully",
+    "imageDetails": "Image Details",
+    "imageCaption": "Image Caption",
+    "displayOrder": "Display Order",
+    "save": "Save"
   }
 } 
