--- a/src/locales/tr/tr-translation.json
+++ b/src/locales/tr/tr-translation.json
@@ -16,6 +16,8 @@
         "ai": "Veri Analizi ve Yapay Zeka"
       },
       "references": {
+        "all": "Tüm Referanslar",
+        "allDesc": "Tüm başarılı projelerimizi keşfedin.",
         "eCommerce": "E-Ticaret Projeleri",
         "corporate": "Kurumsal Web Siteleri",
         "mobile": "Mobil Uygulamalar",
@@ -603,5 +605,140 @@
     "map": {
       "title": "Bizi Ziyaret Edin"
     }
+  },
+  "references": {
+    "title": "Referanslarımız",
+    "subtitle": "Başarıyla tamamladığımız projeler",
+    "noReferences": "Henüz referans bulunmamaktadır.",
+    "loading": "Yükleniyor...",
+    "error": {
+      "title": "Bir hata oluştu",
+      "message": "Referans bilgileri yüklenirken bir hata oluştu."
+    },
+    "notFound": {
+      "title": "Referans bulunamadı",
+      "message": "Aradığınız referans bulunamadı veya silinmiş olabilir."
+    },
+    "visitWebsite": "Web Sitesini Ziyaret Et",
+    "completionDate": "Tamamlanma Tarihi",
+    "addNew": "Yeni Referans Ekle",
+    "backToList": "Listeye Dön",
+    "description": "Açıklama",
+    "details": "Proje Detayları",
+    "client": "Müşteri",
+    "technologies": "Teknolojiler",
+    "projectUrl": "Proje URL",
+    "createdAt": "Oluşturulma Tarihi",
+    "updatedAt": "Güncellenme Tarihi",
+    "form": {
+      "title": "Başlık",
+      "summary": "Özet",
+      "description": "Açıklama",
+      "thumbnailUrl": "Kapak Resmi URL",
+      "clientName": "Müşteri Adı",
+      "clientLogo": "Müşteri Logo URL",
+      "projectUrl": "Proje URL",
+      "completionDate": "Tamamlanma Tarihi",
+      "technologies": "Teknolojiler",
+      "active": "Aktif",
+      "save": "Kaydet",
+      "cancel": "İptal"
+    },
+    "filters": {
+      "all": "Tümü",
+      "active": "Aktif Olanlar",
+      "byTitle": "Başlığa Göre",
+      "byTechnology": "Teknolojiye Göre",
+      "search": "Ara",
+      "searchPlaceholder": "Arama terimi girin..."
+    }
+  },
+  "admin": {
+    "adminPanel": "Yönetim Paneli",
+    "dashboard": "Kontrol Paneli",
+    "references": "Referanslar",
+    "settings": "Ayarlar",
+    "logout": "Çıkış Yap",
+    "online": "Çevrimiçi",
+    "offline": "Çevrimdışı",
+    "totalReferences": "Toplam Referanslar",
+    "activeReferences": "Aktif Referanslar",
+    "inactiveReferences": "Pasif Referanslar",
+    "quickActions": "Hızlı Erişim",
+    "addNewReference": "Yeni Referans Ekle",
+    "manageReferences": "Referansları Yönet",
+    "systemStatus": "Sistem Durumu",
+    "apiStatus": "API Durumu",
+    "lastUpdate": "Son Güncelleme",
+    "recentReferences": "Son Eklenen Referanslar",
+    "viewAll": "Tümünü Görüntüle",
+    "title": "Başlık",
+    "client": "Müşteri",
+    "status": "Durum",
+    "date": "Tarih",
+    "actions": "İşlemler",
+    "active": "Aktif",
+    "inactive": "Pasif",
+    "noReferencesFound": "Referans bulunamadı",
+    "search": "Ara",
+    "searchPlaceholder": "Başlık veya müşteri adı ile ara...",
+    "filterByStatus": "Duruma Göre Filtrele",
+    "allStatuses": "Tüm Durumlar",
+    "activeOnly": "Sadece Aktif",
+    "inactiveOnly": "Sadece Pasif",
+    "sortBy": "Sırala",
+    "newest": "En Yeni",
+    "oldest": "En Eski",
+    "titleAZ": "Başlık (A-Z)",
+    "clientAZ": "Müşteri (A-Z)",
+    "activate": "Aktifleştir",
+    "deactivate": "Pasifleştir",
+    "delete": "Sil",
+    "edit": "Düzenle",
+    "view": "Görüntüle",
+    "confirmDelete": "Silmeyi Onayla",
+    "deleteWarning": "Bu referansı silmek istediğinizden emin misiniz? Bu işlem geri alınamaz.",
+    "confirmBulkDelete": "Seçili referansları silmek istediğinizden emin misiniz? Bu işlem geri alınamaz.",
+    "confirmBulkActivate": "Seçili referansları aktifleştirmek istediğinizden emin misiniz?",
+    "confirmBulkDeactivate": "Seçili referansları pasifleştirmek istediğinizden emin misiniz?",
+    "errorLoadingReferences": "Referanslar yüklenirken bir hata oluştu",
+    "tryAgain": "Tekrar Dene",
+    "createdAt": "Oluşturulma Tarihi",
+    "back": "Geri",
+    "editReference": "Referans Düzenle",
+    "basicInformation": "Temel Bilgiler",
+    "summary": "Özet",
+    "description": "Açıklama",
+    "technologies": "Teknolojiler",
+    "technologiesPlaceholder": "React, Node.js, MongoDB, ...",
+    "technologiesHelp": "Teknolojileri virgülle ayırarak girin",
+    "completionDate": "Tamamlanma Tarihi",
+    "clientInformation": "Müşteri Bilgileri",
+    "clientName": "Müşteri Adı",
+    "projectUrl": "Proje URL",
+    "clientLogo": "Müşteri Logosu",
+    "images": "Görseller",
+    "thumbnail": "Kapak Görseli",
+    "additionalImages": "Ek Görseller",
+    "uploadLogo": "Logo Yükle",
+    "changeLogo": "Logo Değiştir",
+    "uploadThumbnail": "Kapak Görseli Yükle",
+    "changeThumbnail": "Kapak Görseli Değiştir",
+    "addImages": "Görsel Ekle",
+    "new": "Yeni",
+    "saveReference": "Referansı Kaydet",
+    "updateReference": "Referansı Güncelle",
+    "titleRequired": "Başlık alanı zorunludur",
+    "summaryRequired": "Özet alanı zorunludur",
+    "descriptionRequired": "Açıklama alanı zorunludur",
+    "thumbnailRequired": "Kapak görseli zorunludur",
+    "errorSavingReference": "Referans kaydedilirken bir hata oluştu",
+    "referenceAdded": "Referans başarıyla eklendi",
+    "referenceUpdated": "Referans başarıyla güncellendi",
+    "imageDetails": "Resim Detayları",
+    "imageCaption": "Resim Açıklaması",
+    "displayOrder": "Görüntüleme Sırası",
+    "save": "Kaydet",
+    "cancel": "İptal"
   }
 } 
