--- a/src/locales/tr/tr-translation.json
+++ b/src/locales/tr/tr-translation.json
@@ -489,7 +489,14 @@
     }
   },
   "common": {
-    "getQuote": "Teklif Al"
+    "getQuote": "Teklif Al",
+    "dragAndDrop": "Dosyaları buraya sürükleyin veya tıklayın",
+    "or": "veya",
+    "browse": "dosya seçin",
+    "upload": "Yükle",
+    "selectFile": "Dosya Seç",
+    "uploadImage": "Resim Yükle",
+    "preview": "Önizleme"
   },
   "form": {
     "title": "Profesyonel Hizmet Talebi",
@@ -630,6 +637,11 @@
     "projectUrl": "Proje URL",
     "createdAt": "Oluşturulma Tarihi",
     "updatedAt": "Güncellenme Tarihi",
+    "pagination": {
+      "showing": "Gösteriliyor",
+      "of": "/",
+      "references": "referans"
+    },
     "form": {
       "title": "Başlık",
       "summary": "Özet",
@@ -648,7 +660,6 @@
       "all": "Tümü",
       "active": "Aktif Olanlar",
       "byTitle": "Başlığa Göre",
-      "byTechnology": "Hizmete Göre",
       "byService": "Hizmete Göre",
       "search": "Ara",
       "searchPlaceholder": "Arama terimi girin..."
@@ -742,6 +753,96 @@
     "cancel": "İptal",
     "services": "Hizmetler",
     "servicesPlaceholder": "Web Tasarım, E-Ticaret, Mobil Uygulama, ...",
-    "servicesHelp": "Hizmetleri virgülle ayırarak girin"
+    "servicesHelp": "Hizmetleri virgülle ayırarak girin",
+    "blogs": "Bloglar",
+    "addNewBlog": "Yeni Blog Ekle",
+    "manageBlogs": "Blog Yönetimi",
+    "editBlog": "Blog Düzenle",
+    "createBlog": "Yeni Blog Oluştur",
+    "title": "Başlık",
+    "summary": "Özet",
+    "author": "Yazar",
+    "content": "İçerik",
+    "publishDate": "Yayın Tarihi",
+    "tags": "Etiketler",
+    "status": "Durum",
+    "draft": "Taslak",
+    "published": "Yayında",
+    "publish": "Yayınla",
+    "unpublish": "Taslağa Al",
+    "seoSettings": "SEO Ayarları",
+    "seoTitle": "SEO Başlığı",
+    "seoDescription": "SEO Açıklaması",
+    "seoKeywords": "SEO Anahtar Kelimeleri",
+    "thumbnail": "Kapak Görseli",
+    "preview": "Önizleme",
+    "confirmDeleteBlog": "Bu blog yazısını silmek istediğinizden emin misiniz? Bu işlem geri alınamaz.",
+    "confirmBulkDeleteBlogs": "Seçilen {{count}} blog yazısını silmek istediğinizden emin misiniz? Bu işlem geri alınamaz.",
+    "blogDeleted": "Blog başarıyla silindi",
+    "blogsDeleted": "Seçilen bloglar başarıyla silindi",
+    "errorDeletingBlog": "Blog silinirken bir hata oluştu",
+    "errorDeletingBlogs": "Bloglar silinirken bir hata oluştu",
+    "titleRequired": "Başlık gerekli",
+    "summaryRequired": "Özet gerekli",
+    "contentRequired": "İçerik gerekli",
+    "authorRequired": "Yazar gerekli",
+    "formError": "Form hatası",
+    "pleaseFixErrors": "Lütfen formdaki hataları düzeltin",
+    "blogUpdated": "Blog başarıyla güncellendi",
+    "blogCreated": "Blog başarıyla oluşturuldu",
+    "errorSavingBlog": "Blog kaydedilirken bir hata oluştu",
+    "blogPublished": "Blog başarıyla yayınlandı",
+    "blogUnpublished": "Blog başarıyla taslağa alındı",
+    "statusUpdateFailed": "Durum güncelleme işlemi başarısız oldu",
+    "searchBlogs": "Blog ara...",
+    "noBlogsFound": "Hiç blog yazısı bulunamadı",
+    "selectBlogsFirst": "Lütfen önce blog seçin",
+    "deleteBulk": "Toplu Sil"
+  },
+  "blog": {
+    "title": "Blog",
+    "subtitle": "Son teknoloji ve tasarım trendleri hakkında bilgiler",
+    "latestPosts": "Son Yazılar",
+    "readMore": "Devamını Oku",
+    "byAuthor": "Yazar: {{author}}",
+    "publishedOn": "Yayın Tarihi: {{date}}",
+    "relatedPosts": "İlgili Yazılar",
+    "readingTime": "{{time}} dakika okuma",
+    "noPostsFound": "Hiç yazı bulunamadı",
+    "searchResults": "Arama sonuçları: {{term}}",
+    "searchPlaceholder": "Yazı ara...",
+    "filterByTags": "Etiketlere göre filtrele",
+    "allPosts": "Tüm Yazılar",
+    "loadMore": "Daha Fazla Yükle",
+    "errorLoading": "Bloglar yüklenirken bir hata oluştu",
+    "retry": "Tekrar Dene",
+    "backToList": "Listeye Dön",
+    "taggedWith": "{{tag}} ile etiketlenen yazılar",
+    "min": "dk",
+    "pageTitle": "Blog",
+    "pageDescription": "Teknoloji, tasarım ve dijital pazarlama hakkında en güncel içerikler",
+    "popularTags": "Popüler Etiketler",
+    "tryDifferentSearch": "Farklı bir arama yapmayı deneyebilirsiniz",
+    "searchPlaceholder": "Blog yazılarında ara...",
+    "clearFilters": "Filtreleri Temizle",
+    "searchResults": "Arama Sonuçları",
+    "tagResults": "Etiket Sonuçları",
+    "noPostsFound": "Hiç yazı bulunamadı",
+    "previous": "Önceki",
+    "next": "Sonraki",
+    "readMore": "Devamını Oku",
+    "publishDate": "Yayın Tarihi",
+    "author": "Yazar",
+    "minutes": "dakika",
+    "readTime": "okuma süresi",
+    "share": "Paylaş",
+    "relatedPosts": "İlgili Yazılar",
+    "categories": "Kategoriler",
+    "tags": "Etiketler",
+    "content": "İçerik",
+    "aboutAuthor": "Yazar Hakkında",
+    "blogNotFound": "Blog Bulunamadı",
+    "blogNotFoundDescription": "Aradığınız blog yazısı bulunamadı veya silinmiş olabilir.",
+    "backToBlog": "Blog Sayfasına Dön"
   }
 } 
