update blog detail  and add tinyMCE editor

--- a/src/locales/tr/tr-translation.json
+++ b/src/locales/tr/tr-translation.json
@@ -797,7 +797,27 @@
     "searchBlogs": "Blog ara...",
     "noBlogsFound": "Hiç blog yazısı bulunamadı",
     "selectBlogsFirst": "Lütfen önce blog seçin",
-    "deleteBulk": "Toplu Sil"
+    "deleteBulk": "Toplu Sil",
+    "viewWebsite": "Web Sitesini Görüntüle",
+    "quickLinks": "Hızlı Erişim",
+    "authorAZ": "Yazara Göre (A-Z)",
+    "errorUpdatingBlog": "Blog güncellenirken bir hata oluştu",
+    "error": "Hata",
+    "goBack": "Geri Dön",
+    "errorDeletingBlog": "Blog silinirken bir hata oluştu",
+    "blogDeleted": "Blog başarıyla silindi",
+    "errorDeletingBlogs": "Bloglar silinirken bir hata oluştu",
+    "blogsDeleted": "Seçili bloglar başarıyla silindi",
+    "selectBlogsFirst": "Lütfen önce blog seçin",
+    "errorActivatingBlog": "Blog aktifleştirilirken bir hata oluştu",
+    "errorDeactivatingBlog": "Blog pasifleştirilirken bir hata oluştu",
+    "blogActivated": "Blog başarıyla aktifleştirildi",
+    "blogDeactivated": "Blog başarıyla pasifleştirildi",
+    "blogsActivated": "Seçili bloglar başarıyla aktifleştirildi",
+    "blogsDeactivated": "Seçili bloglar başarıyla pasifleştirildi",
+    "errorChangingStatus": "Durum değiştirilirken bir hata oluştu",
+    "metaDescription": "Meta Açıklama",
+    "metaDescriptionHelp": "En fazla 160 karakter. Boş bırakılırsa blog özeti kullanılır."
   },
   "blog": {
     "title": "Blog",
